# FederatedMachineLearning

./: .gitignore  README.md  client_metrics_bagging_5_iid.csv  client_metrics_cyclic_41_iid.csv  client_metrics_cyclic_5_iid.csv  federated_metrics_bagging_15_iid.csv  federated_metrics_cyclic_15_iid.csv  federated_metrics_cyclic_41_iid.csv
baseline/: tuning.py  (+4 more)
project/: README.md  client_metrics.csv  client_metrics_balanced_15.csv  client_metrics_balanced_41.csv  client_metrics_balanced_5.csv  federated_metrics15.csv  federated_metrics_bagging_15_iid.csv  federated_metrics_bagging_41_iid.csv  federated_metrics_bagging_5_iid.csv  federated_metrics_bagging__41_non-iid.csv  final_model.json  final_model_equal_xgb15.json  final_model_equal_xgb41.json  final_model_equal_xgb5.json  final_model_weighted_xgb15.json  final_model_weighted_xgb41.json  final_model_weighted_xgb5.json  final_model_xgb_global.json  pyproject.toml
project/baseline/: centralized_baseline.py  data_utils.py  exploration.py  model_utils.py  plot_comparison.py  tuning.py  tuning_results_rf.csv
project/baseline_federated/client/: client_bagging_15_iid_eta_0.05_le_10_total_1500.csv  client_bagging_41_iid_eta_0.05_le_10_total_4100.csv  client_baseline_fed_plots.py  client_cyclic_41_non-iid_eta_0.05_le_10_total_4100.csv  client_cyclic_5_iid_eta_0.05_le_10_total_500.csv
project/baseline_federated/global/: global_bagging_15_iid_eta_0.05_le_10_total_1500.csv  global_bagging_41_iid_eta_0.05_le_10_total_4100.csv  global_bagging_41_non-iid_eta_0.05_le_10_total_4100.csv  global_baseline_fed_plots.py  global_cyclic_15_iid_eta_0.05_le_10_total_1500.csv  global_cyclic_41_non-iid_eta_0.05_le_10_total_4100.csv  global_cyclic_5_iid_eta_0.05_le_10_total_500.csv
project/experiment/client/bagging/: client_bagging_5_iid_eta_0.05_le_10_total_500.csv  client_bagging_5_iid_eta_0.05_le_5_total_250.csv  client_bagging_5_iid_eta_0.05_le_8_total_400.csv
project/experiment/global/cyclic/: cyclic_global_plot.py
project/project/: __init__.py  client_app.py  client_app_simplenn.py  server_app.py  server_app_simplenn.py  task.py  task_simplenn.py  utils.py
(+66 files in other folders)
