# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "ucimlrepo==0.0.7",
    "pandas==2.3.3",
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
    "xgboost==3.1.2",
    "scikit-learn==1.7.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "fabiankargl"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "project.server_app:app"
clientapp = "project.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 10
fraction-train = 0.6
local-epochs = 10
lr = 0.005
batch-size = 64
input_dim = 108
weighted = true
fraction-evaluate = 0.6
strategy = "bagging" 
data-distribution = "non-iid" 

params.objective = "binary:logistic"
params.eta = 0.05 
params.max-depth = 6
params.eval-metric = "auc"
params.nthread = 16
params.colsample_bytree = 0.7
params.num_parallel_tree = 2
params.subsample = 0.9
params.scale_pos_weight = 3
params.tree-method = "hist"

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 5 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 5

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
